# pubgrub-uni

./: .clang-format  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  IntervalSetFormatter.h  JsonPackage.h  JsonProfile.h  JsonRepository.h  JsonRequirement.h  MemoryPackage.h  MutableRepository.h  Package.h  Profile.h  Repository.h  Reqirement.h  main.cpp
src/pubgrub/: debug.hpp  failure.hpp  solve.hpp
